adicionando chamadas as apis dos ecommerces

--- a/CFidelity.API/appsettings.json
+++ b/CFidelity.API/appsettings.json
@@ -8,5 +8,9 @@
     }
   },
   "ConnectionStrings": {
+  },
+  "MongoDBSettings": {
+    "CFidelityConnection ": "mongodb://cfidelityapp:pass123@ds253840.mlab.com:53840/cfidelity",
+    "CFidelityDatabase": "cfidelity"
   }
 }
